Update styles and fix spacing

--- a/style.css
+++ b/style.css
@@ -10,16 +10,18 @@ body {
 .header {
     background-color:#1F2937;
     margin: 0px;
-    padding: 48px 100px 48px;
+    padding: 24px 50px 24px;
     display: flex;
     font-size: 18px;
     color: #E5E7EB;
     justify-content: space-between;
+    align-items: center;
 }
 
 .logo>img {
     width: 40px;
     height: auto;
+    filter: invert(1);
 }
 
 .hero-right>img {
@@ -28,18 +30,26 @@ body {
 }
 
 .hero {
-    background-color:#1F2937;
+    background-image: url("./images/hero-background.jpg");
+    background-size: cover;
     margin: 0px;
-    padding: 48px 100px 48px;
+}
+
+.hero-container {
+    background-color: rgb(31, 41, 55, 80%);
+    margin: 72px;
+    border-radius: 20px;
+    padding: 24px 50px 24px;
     display: flex;
     justify-content: center;
     color: #E5E7EB;
-    gap: 300px;
+    gap: 100px;
     align-items: center;
 }
 
+
 .hero-left {
-    width: 400px;
+    width: 450px;
     gap: 16px;
 }
 
@@ -52,6 +62,7 @@ body {
     font-weight:bolder;
     color: #F9FAF8;
     margin-bottom: 16px;
+    text-align: center;
 }
 
 .links {
@@ -80,10 +91,8 @@ a {
 }
 
 .element>img {
-    width: 100px;
+    width: 200px;
     height: auto;
-    border-radius: 10px;
-    border: 3px solid #3882F6;
 }
 
 button {
@@ -92,7 +101,7 @@ button {
     border-radius: 10px;
     padding: 8px;
     display: flex;
-    width: 100px;
+    width: 200px;
     justify-content: center;
     border-color: #E5E7EB;
 }
@@ -122,13 +131,14 @@ button {
     padding: 16px;
     gap: 4px;
     color: #F9FAF8;
+    font-size: 18px;
 }
 
 .info {
     display: flex;
     flex-direction: column;
     align-items: center;
-    padding: 24px;
+    padding: 32px;
     margin-top: 16px;
 }
 
@@ -142,11 +152,13 @@ button {
     display: flex;
     justify-content: center;
     gap: 4rem;
-    padding: 24px;
+    padding: 32px;
 }
 
 .container>.element {
-    width: 100px;
+    width: 200px;
+    text-align: center;
+    font-size: 18px;
 }
 
 .quote {
